# HastyCuCompute

./: .gitignore  CMakeLists.txt  CMakePresets copy.json  CMakePresets.json  HastyCuComputeConfig.cmake.in  libstdc++.modules.json  notes.txt  patches.txt  ptrace_command.txt  vcpkg copy.json  vcpkg.json  wavedec1d.pt  wavedec2d.pt  wavedec3d.pt  waverec1d.pt  waverec2d.pt  waverec3d.pt
cpp/corelib/include/: configure_file_settings.hpp  configure_file_settings.hpp.in
cpp/corelib/interface/: interface.cpp  interface.cppm  interface_cache.cppm  interface_typing.cppm  py_interface.cpp  test_interface.cpp
cpp/corelib/interface/include/: interface.hpp  interface_includes.hpp  py_interface.hpp  test_interface.hpp
cpp/corelib/lib/extwrap/: wrap_torch.cppm
cpp/corelib/lib/fft/: fft.cpp  fft.cppm  nufft.cppm  toeplitz.cppm  vkfft.cpp
cpp/corelib/lib/generic_value/: generic_value.cppm
cpp/corelib/lib/io/: hdf5.cpp
cpp/corelib/lib/mri/: adjoint.cppm  forward.cppm  misc.cppm  normal.cppm  off_resonance.cppm  trajectory.cppm
cpp/corelib/lib/nvrtc/: nvrtc.cppm
cpp/corelib/lib/op/: cg.cppm  op.cppm
cpp/server/: generic_value_service.cppm  server.cpp  stream_service.cppm
cpp/server/protos/: generic_value.proto  stream_service.proto
data/models/wavelets/: wavedec1d_bior2.2.pt  wavedec1d_coif1.pt  wavedec1d_coif2.pt  wavedec1d_coif3.pt  wavedec1d_db2.pt  wavedec1d_db4.pt  wavedec1d_db6.pt  wavedec1d_db8.pt  wavedec1d_haar.pt  wavedec1d_sym2.pt  wavedec1d_sym4.pt  wavedec1d_sym8.pt  wavedec2d_bior2.2.pt  wavedec2d_coif1.pt  wavedec2d_coif2.pt  wavedec2d_coif3.pt  wavedec2d_db2.pt  wavedec2d_db4.pt  wavedec2d_db6.pt  wavedec2d_db8.pt  wavedec2d_haar.pt  wavedec2d_sym2.pt  wavedec2d_sym4.pt  wavedec2d_sym8.pt  wavedec3d_bior2.2.pt  wavedec3d_coif1.pt  wavedec3d_coif2.pt  wavedec3d_coif3.pt  wavedec3d_db2.pt  wavedec3d_db4.pt  wavedec3d_db6.pt  wavedec3d_db8.pt  wavedec3d_haar.pt  wavedec3d_sym2.pt  wavedec3d_sym4.pt  wavedec3d_sym8.pt  waverec1d_bior2.2.pt  waverec1d_coif1.pt  waverec1d_coif2.pt  waverec1d_coif3.pt  (+32 more)
hasty_python/: pyproject.toml  reduced_svd_test.py  right_precond_test.py  simul_op.py  sympy_tests.ipynb  test_exp.ipynb  testio.py  view_napari.py  view_plotly.py  viewimg.py
hasty_python/hastycompute.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hasty_python/hastycompute/denoiser/: test_denoise.py
hasty_python/hastycompute/hastycompute.egg-info/: PKG-INFO  top_level.txt
hasty_python/hastycompute/plot/: orthoslicer.py  traj_plots.py
hasty_python/hastycompute/seq_design/: density_design.py  gradient_design.py  short_grad_design.py  spoiler_design.py  velocity_design.py  venc_design.py
hasty_python/hastycompute/utils/: torch_utils.py
hasty_python/hastycompute/wavelet/: README.md  conv2d_bug.py  wavedec1d.pt  wavedec1d_haar_l2.pt  wavedec2d.pt  wavedec2d_haar_l2.pt  wavedec3d.pt  wavedec3d_haar_l2.pt  wavelet_tests.py  waverec1d.pt  waverec1d_haar.pt  waverec2d.pt  waverec2d_haar.pt  waverec3d.pt  waverec3d_haar.pt
hasty_python/junk/: load_hasty_compute.py
hasty_python/junk/dash_viewer/: dash_vtk_slicer.py
hasty_python/junk/seq_design_old/: pns.py  rot.py  spiral_learning.py
hasty_python/junk/seq_design_playground/: my_trajectories.py  radial_moving_density.ipynb  seq_design2.py  seq_design3.py  traj_model.py  trajectory_model.py  vel_design.py  vel_maths.ipynb
hasty_python/scripts/off_resonance/: create_offresnonlin_approx.py
hasty_python/scripts/yarnball/: yarnball_4D_flow.py
include/: interface.hpp  interface_includes.hpp  pch.hpp  py_interface.hpp  py_interface_includes.hpp
lib/: fft.hpp  fft.ixx  hdf5.cpp  hdf5.cppm  hdf5.ixx  interface.cpp  interface.hpp  main.cpp  main.cu  mri.cppm  mri.ixx  nufft.cppm  nufft.hpp  nufft.ixx  pch.hpp  pch.ixx  py_interface.cpp  tensor.cpp  tensor.hpp  tensor.ixx  tensorio.ixx  threading.cppm  threading.ixx  trace.cppm  trace.ixx  util.hpp  util.ixx  util_funcs.ixx  util_torch.ixx
lib/fft/: fft.cppm  toeplitz.cppm  vkfft.cppm
lib/fft/kernels/: toeplitz_load_2D.cu
lib/interface/: interface.cpp  interface.cppm  interface.ixx  py_interface.cpp  py_interface.cppm
lib/mri/: adjoint.cppm  forward.cppm  full_4d_flow_type1.cppm  misc.cppm  mod_mri.cppm  mri.cppm  normal.cppm  off_resonance.cppm  sense.cppm  sense.ixx  trajectory.cppm  trajectory.ixx
lib/nvrtc/: nvrtc.cppm
lib/op/: alg.cppm  cg.cppm  cg.ixx  min.ixx  op.cppm  op.ixx
lib/tensor/: impl_tensor_extrinsic_math.cppm  impl_tensor_extrinsic_operator.cppm  impl_tensor_intrinsic.cppm  impl_tensor_intrinsic_inplace.cppm  impl_tensor_intrinsic_math.cppm  impl_tensor_intrinsic_operator.cppm  mod_tensor.cppm  mod_tensor_base.cppm  mod_tensor_caching.cppm  mod_tensor_extrinsic.cppm  mod_tensor_factory.cppm  mod_tensor_intrinsic.cppm  tensor.cpp  tensor.ixx  tensor_impl.ixx
lib/trace/: trace.cpp  trace.cppm  trace_cache.cpp  trace_cache.cppm
lib/util/: util.cppm  util.ixx  util_concepts.cppm  util_containers.cppm  util_funcs.cppm  util_funcs.ixx  util_idx.cppm  util_idx.ixx  util_io.cppm  util_io.ixx  util_meta.cppm  util_meta.ixx  util_span.cppm  util_span.ixx  util_torch.cppm  util_torch.ixx  util_typing.cppm  util_typing.ixx
python/: create_offresnonlin_approx.py  ffttests.py  load_hasty_compute.py  reduced_svd_test.py  right_precond_test.py  seq_design.py  seq_design2.py  simul_op.py  torch_utils.py  traj_utils.py  tseg.py  view_napari.py
python/dash_viewer/: dash_slicer.py
python/seq_design/: my_trajectories.py  radial_moving_density.ipynb  seiffert_4D_flow.py  sequtil.py  spiral_learning.py  spiral_trajectory.py  traj_design.py  traj_model.py  vel_design.py  vel_design2.py  vel_maths.ipynb
python/seq_design_playground/: density_design.py  gradient_design.py  learnable_yarnball.py  my_trajectories.py  pns_design.py  radius_design.py  rotation.py  seiffert_4D_flow.py  sequtil.py  short_grad_design.py  traj_design.py  traj_utility.py  trajectory_model.py  vel_design_old.py  vel_maths.ipynb  velocity_design.py  yarnball_4D_flow.py  yarnball_design.py
test/: fft_tests.cpp  main.cpp  tests.cpp  torch_tests.cpp
(+39 files in other folders)
